Fix stupid mobile view closes #1

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>LuluLedger</title>
+    <!-- <link rel="stylesheet" href="../dist/view/styles.css" /> -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>LuluLedger</title>
-  <!-- <link rel="stylesheet" href="../dist/view/styles.css" /> -->
-</head>
-
-<body>
-  <noscript>You need to enable Javascript to run this application.</noscript>
-  <div id="root">
-    <!-- Your react app will be rendered here -->
-  </div>
-  <script type="module" src="dist/view/bundle-view.js"></script>
-</body>
-
+  <body>
+    <noscript>You need to enable Javascript to run this application.</noscript>
+    <div id="root">
+      <!-- Your react app will be rendered here -->
+    </div>
+    <script type="module" src="dist/view/bundle-view.js"></script>
+  </body>
 </html>
