Limit the scope of static files we expose

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,6 @@
     <div id="root">
       <!-- Your react app will be rendered here -->
     </div>
-    <script type="module" src="dist/view/bundle-view.js"></script>
+    <script type="module" src="view/bundle-view.js"></script>
   </body>
 </html>
