--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
 
       gtag("config", "G-N6FXVX6TD7");
     </script>
+    <script>
+      var user = {{user}}
+      window.user = user || null
+    </script>
     <meta charset="utf-8" />
     <title>LuluLedger</title>
     <!-- <link rel="stylesheet" href="../dist/view/styles.css" /> -->
