--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
       gtag("config", "G-N6FXVX6TD7");
     </script>
     <script>
-      var user = {{user}}
-      window.user = user || null
+      window.user = {{user}} || null
     </script>
     <meta charset="utf-8" />
     <title>LuluLedger</title>
